k8/statefullset.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-wildcard-host
spec:
  ports:
  - port: 8080
    name: web
    targetPort: 80
  clusterIP: None
  selector:
    app: rdicidr
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rdicidr
spec:
  selector:
    matchLabels:
      app: rdicidr
  serviceName: ingress-wildcard-host
  replicas: 3
  template:
    metadata:
      labels:
        app: rdicidr
    spec:
      containers:
      - name: rdicidr
        image: jayharnesha007/rdicidr:latest
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html/uploads
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      storageClassName: csi-hostpath-sc
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
